# mayaCMake

./: CMakeLists.txt  FindMaya.cmake
mayaplugin/: CMakeLists.txt
mayaplugin/modules/: #FindMaya.cmake#  FindMaya.cmake
mayaplugin/src/: CMakeLists.txt  pluginMain.cpp  sampleCmd.cpp  sampleCmd.h
